Switched to new fastCSV library